@@ -1,3 +1,7 @@
+2005-12-15  Max Horn  <max@quendi.de>
+
+	* alloc.cc, Makefile.am, msvcstuff/Exult.vcproj: Removed alloc.cc.
+
 2005-12-14  Max Horn  <max@quendi.de>
 
 	* configure.ac: Removed several outdated / obsolete configure options.
